max-width of Card limited to 800px

--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ footer a {
 }
 .card {
     width: 50vw !important;
+    max-width: 800px;
     height: fit-content;
     background-color: white;
     border: 1px solid lightgrey;
