--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Roboto;
+    font-family: 'Orbitron'!important;
     background-image: url(./img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -72,7 +72,7 @@ footer a {
     height: 100px;
 }
 .inputContainer {
-    width: 160px;
+    width: 200px;
     height: 50px;
     display: flex;
     align-items: center;
@@ -85,7 +85,7 @@ footer a {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
 }
 .input {
-    width: 150px;
+    width: 190px;
     height: 40px;
     border: none;
     outline: none;
@@ -96,6 +96,7 @@ footer a {
     letter-spacing: 0.8px;
     color: rgb(51,102,175);
     font-size: 13.4px;
+    text-align: center;
 }
 
 #pokedex {
@@ -281,12 +282,12 @@ footer a {
     width: 40px;
 }
 .progress {
-    width: 70%;
+    width: 65%;
     height: 25px !important;
 }
 
 .statsTitle {
-    width: 30%;
+    width: 35%;
 }
 .tab-content p {
     color: #3366af !important;
