--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Orbitron'!important;
-    background-image: url(./img/background.jpg);
+    background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
